[gd_scene load_steps=7 format=3 uid="uid://bah6bwn6do5bj"]

[ext_resource type="FontFile" uid="uid://bs6libyxfwgc" path="res://Visual Assets/Fonts/MorrisRomanBlack.ttf" id="1_5ft2k"]
[ext_resource type="Script" path="res://Object Scenes/Player/Statue Menu.gd" id="1_febv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh83s"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="LabelSettings" id="LabelSettings_x216d"]
font = ExtResource("1_5ft2k")
font_size = 85
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3nji"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwas2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="StatueMenu" type="Panel"]
custom_minimum_size = Vector2(750, 375)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = 164.0
offset_right = 375.0
offset_bottom = 539.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kh83s")
script = ExtResource("1_febv6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -135.5
offset_right = 329.0
offset_bottom = -58.5
grow_horizontal = 2
grow_vertical = 2
text = "Rest at this Statue?"
label_settings = SubResource("LabelSettings_x216d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.5
offset_top = 0.5
offset_right = 337.5
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Yes" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(325, 25)
layout_mode = 2
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5ft2k")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_c3nji")
theme_override_styles/focus = SubResource("StyleBoxFlat_jwas2")
text = "Yes."

[node name="No" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(325, 25)
layout_mode = 2
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5ft2k")
theme_override_font_sizes/font_size = 125
theme_override_styles/normal = SubResource("StyleBoxFlat_c3nji")
theme_override_styles/focus = SubResource("StyleBoxFlat_jwas2")
text = "No."

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/No" to="." method="_on_no_pressed"]
